[gd_scene load_steps=17 format=2]

[ext_resource path="res://Item/estrellas/Blancas/estrella_blanca.tscn" type="PackedScene" id=1]
[ext_resource path="res://Item/boton_player_ll/boton_1/boton_player_ll.tscn" type="PackedScene" id=2]
[ext_resource path="res://Item/boton_player_ll/boton_2/bot_player_1_2.tscn" type="PackedScene" id=3]
[ext_resource path="res://Item/boton_player_l/boton_1/boton_player_l.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemigo_sin_colicion/Enemigo_1/enemigo_1.tscn" type="PackedScene" id=5]
[ext_resource path="res://Item/Plataforma_player_ll/plataforma_player_ll.tscn" type="PackedScene" id=6]
[ext_resource path="res://Item/Plataforma_player_l/plataforma_player_l.tscn" type="PackedScene" id=7]
[ext_resource path="res://Item/estrellas/Negras/estrella_negra.tscn" type="PackedScene" id=8]
[ext_resource path="res://Mundo/suelo/suelo.tscn" type="PackedScene" id=9]
[ext_resource path="res://Item/boton_player_l/boton_2/bot_play_l_2.tscn" type="PackedScene" id=10]
[ext_resource path="res://Mundo/fondo/fondo_mun.tscn" type="PackedScene" id=11]
[ext_resource path="res://Mundo/vidas/vidas.tscn" type="PackedScene" id=12]
[ext_resource path="res://Item/boton_player_l/boton_3/bot_play_l_3.tscn" type="PackedScene" id=13]
[ext_resource path="res://Item/boton_player_ll/boton_3/bot_player_1_3.tscn" type="PackedScene" id=14]
[ext_resource path="res://Nivel_2/Nivel_2.gd" type="Script" id=15]
[ext_resource path="res://Mundo/fon_tiempo.png" type="Texture" id=16]

[node name="Nivel_2" type="Node2D"]
script = ExtResource( 15 )

[node name="fondo" type="Node2D" parent="."]

[node name="fondo_mun" parent="fondo" instance=ExtResource( 11 )]

[node name="FonTiempo" type="Sprite" parent="."]
position = Vector2( 518, -36 )
texture = ExtResource( 16 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="tiempo" type="Label" parent="CanvasLayer" groups=["tiempo"]]
margin_left = 574.0
margin_top = 2.0
margin_right = 614.0
margin_bottom = 16.0
rect_scale = Vector2( 3, 4 )

[node name="nombre_tiempo" type="Label" parent="CanvasLayer"]
margin_left = 383.0
margin_top = 4.0
margin_right = 431.0
margin_bottom = 18.0
rect_scale = Vector2( 3, 3 )
text = "Tiempo"

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="suelo" type="Node2D" parent="."]

[node name="suelo" parent="suelo" instance=ExtResource( 9 )]
position = Vector2( 341, 629 )

[node name="suelo2" parent="suelo" instance=ExtResource( 9 )]
position = Vector2( 343, -33 )

[node name="suelo3" parent="suelo" instance=ExtResource( 9 )]
position = Vector2( -74, 301 )
scale = Vector2( 0.1, 10 )

[node name="suelo4" parent="suelo" instance=ExtResource( 9 )]
position = Vector2( 1062, 298 )
scale = Vector2( 0.1, 10 )

[node name="vidas" parent="." instance=ExtResource( 12 )]
position = Vector2( 100, 26 )

[node name="platafor_soli" type="Node2D" parent="."]

[node name="suelo" parent="platafor_soli" instance=ExtResource( 9 )]
position = Vector2( 103, 127 )
scale = Vector2( 0.3, 0.55 )

[node name="suelo4" parent="platafor_soli" instance=ExtResource( 9 )]
position = Vector2( 96, 384 )
scale = Vector2( 0.3, 0.55 )

[node name="suelo7" parent="platafor_soli" instance=ExtResource( 9 )]
position = Vector2( 465, 562 )
scale = Vector2( 0.1, 2 )

[node name="suelo2" parent="platafor_soli" instance=ExtResource( 9 )]
position = Vector2( 672, 131 )
scale = Vector2( 0.5, 0.55 )

[node name="suelo3" parent="platafor_soli" instance=ExtResource( 9 )]
position = Vector2( 214, 258 )
scale = Vector2( 0.6, 0.55 )

[node name="suelo5" parent="platafor_soli" instance=ExtResource( 9 )]
position = Vector2( 722, 387 )
scale = Vector2( 0.6, 0.55 )

[node name="suelo6" parent="platafor_soli" instance=ExtResource( 9 )]
position = Vector2( 379, 499 )
scale = Vector2( 0.6, 0.55 )

[node name="estrellas_Negras" type="Node2D" parent="."]

[node name="estrella_negra" parent="estrellas_Negras" instance=ExtResource( 8 )]
position = Vector2( 42, 70 )

[node name="estrella_negra2" parent="estrellas_Negras" instance=ExtResource( 8 )]
position = Vector2( 49, 206 )

[node name="estrella_negra3" parent="estrellas_Negras" instance=ExtResource( 8 )]
position = Vector2( 579, 333 )

[node name="estrellas_Blancas" type="Node2D" parent="."]

[node name="estrella_blanca" parent="estrellas_Blancas" instance=ExtResource( 1 )]
position = Vector2( 982, 339 )

[node name="estrella_blanca2" parent="estrellas_Blancas" instance=ExtResource( 1 )]
position = Vector2( 989, 73 )

[node name="estrella_blanca3" parent="estrellas_Blancas" instance=ExtResource( 1 )]
position = Vector2( 44, 328 )

[node name="platafor_negro" type="Node2D" parent="."]

[node name="plataforma_player_ll" parent="platafor_negro" instance=ExtResource( 6 )]
position = Vector2( 243, 243 )

[node name="plataforma_player_ll2" parent="platafor_negro" instance=ExtResource( 6 )]
position = Vector2( 810, 371 )

[node name="plataforma_player_ll3" parent="platafor_negro" instance=ExtResource( 6 )]
position = Vector2( 236, 111 )

[node name="platafor_Blancas" type="Node2D" parent="."]

[node name="Plataforma_player_l" parent="platafor_Blancas" instance=ExtResource( 7 )]
position = Vector2( 720, 483 )

[node name="Plataforma_player_l2" parent="platafor_Blancas" instance=ExtResource( 7 )]
position = Vector2( 215, 368 )

[node name="Plataforma_player_l3" parent="platafor_Blancas" instance=ExtResource( 7 )]
position = Vector2( 847, 115 )

[node name="bot_play_1" type="Node2D" parent="."]

[node name="boton_player_l" parent="bot_play_1" instance=ExtResource( 4 )]
position = Vector2( 199, 471 )

[node name="bot_play_l_2" parent="bot_play_1" instance=ExtResource( 10 )]
position = Vector2( 938, 358 )

[node name="bot_play_l_3" parent="bot_play_1/bot_play_l_2" instance=ExtResource( 13 )]
position = Vector2( -822, -131 )

[node name="bot_play_2" type="Node2D" parent="."]
position = Vector2( -8, 0 )

[node name="boton_player_ll" parent="bot_play_2" instance=ExtResource( 2 )]
position = Vector2( 688, 356 )

[node name="bot_player_1_2" parent="bot_play_2" instance=ExtResource( 3 )]
position = Vector2( 117, 353 )

[node name="bot_player_1_3" parent="bot_play_2" instance=ExtResource( 14 )]
position = Vector2( 547, 102 )

[node name="enemigo" type="Node2D" parent="."]

[node name="enemigo_1" parent="enemigo" instance=ExtResource( 5 )]
position = Vector2( 277, 452 )

[node name="enemigo_2" parent="enemigo" instance=ExtResource( 5 )]
position = Vector2( 331, 214 )

[node name="Position_p_1" type="Position2D" parent="." groups=["spawn_1"]]
position = Vector2( 582, 552 )

[node name="Position2_p_2" type="Position2D" parent="." groups=["spawn_2"]]
position = Vector2( 348, 550 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
